<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_name"
        android:textAlignment="center"
        android:hint="@string/select_a_user_name"
        android:paddingTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_email"
        android:textAlignment="center"
        android:hint="@string/enter_a_valid_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_password"
        android:textAlignment="center"
        android:hint="@string/enter_a_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/register_confirm_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_submit_button"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>